# PULSO

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  vm-diag.yml  vm-fix.yml
app/: config.py  database.py  enums.py  main.py  templates_config.py
app/accounts/: members.py  models.py  router.py  service.py
app/ai/: llm.py
app/auth/: deps.py  models.py  router.py  service.py
app/i18n/: __init__.py
app/items/: graph.py  importer.py  lifecycle.py  models.py  relationships.py  router.py  search.py  service.py
app/jobs/: handlers.py  models.py  worker.py
app/management/: gantt.py  models.py  router.py  service.py
app/mcp/: server.py  tools.py
app/projects/: access.py  models.py  router.py  service.py
app/scopes/: models.py  router.py  service.py
app/static/: manifest.webmanifest
app/templates/: account_integrations.html  account_members.html  account_password.html  accounts_admin.html  admin.html  archive.html  backlog.html  base.html  dashboard.html  hilo_detail.html  hilos.html  ideas.html  incidentes.html  incidents.html  item_detail.html  login.html  management_deliverable.html  management_documentos.html  management_pendientes.html  management_plan.html  prioridad.html  priority.html  projects_list.html  projects_new.html  projects_settings.html  registro.html  setup.html  thread_detail.html  threads.html
app/threads/: models.py  router.py  service.py
app/ui/: flash.py  router.py
app/webhooks/: connection.py  models.py  router.py  service.py
assets/: .thumbnail  Pulso Brand Assets.dc.html  Pulso Logo.dc.html
docs/: MCP.md
migrations/: env.py
migrations/versions/: v0001_initial_schema.py  v0002_search_tsvector.py  v0003_item_relationships.py  v0004_last_touched_jsonb.py  v0005_threads.py  v0006_perf_btree_indexes.py  v0007_embedding_hnsw_index.py  v0008_fk_ondelete_policies.py  v0009_token_expiry_and_artifact_stage_check.py  v0010_multiproject.py  v0011_english_enums.py  v0012_accounts.py  v0012_backfill_default_project.py  v0013_project_isolation_hardening.py  v0014_accounts.py  v0015_relax_project_id_nullable.py  v0016_management.py  v0017_sentry_connections.py  v0018_english_thread_stages.py
tests/: conftest.py  test_access_and_setup.py  test_account_integrations.py  test_accounts.py  test_auth.py  test_backlog_filters.py  test_bugfixes.py  test_config.py  test_coverage_extra.py  test_error_paths.py  test_flash.py  test_graph.py  test_i18n.py  test_importer.py  test_invariants.py  test_isolation.py  test_items.py  test_items_rest.py  test_jobs.py  test_lifecycle.py  test_llm.py  test_management.py  test_management_gantt.py  test_management_ui.py  test_mcp.py  test_mcp_tools.py  test_routes_extra.py  test_scopes.py  test_search.py  test_sentry_connection.py  test_sentry_webhook_routing.py  test_services.py  test_sprint0.py  test_sprint1.py  test_sprint2.py  test_sprint4.py  test_sprint5.py  test_theme_helpers.py  test_ui.py  test_webhooks_service.py
(+38 files in other folders)
