[project]
name = "pulso"
version = "2026.7.10"
description = "Agent-native backlog manager for solo-preneurs — Claude Code reads and writes your backlog via MCP."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rodolfo Cuevas" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
]

[project.urls]
Repository = "https://github.com/rlcuevas14/PULSO"
Issues = "https://github.com/rlcuevas14/PULSO/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.7.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
# SQLAlchemy async bridges sync<->async via greenlet; without this, coverage silently
# misses lines executed across that boundary (async DB handlers under-report badly).
concurrency = ["greenlet", "thread"]
# Migrations are validated by the Alembic round-trip in CI, not by test coverage.
omit = ["migrations/*", "app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
